Changed fontsize, there may be some issues with the alignment between the marker and tooltip, 52 was off-center for me

--- a/client/src/Map/Map.css
+++ b/client/src/Map/Map.css
@@ -30,9 +30,9 @@
   z-index: 1;
   bottom: 150%;
   left: 50%;
-  margin-left: -52px;
+  margin-left: -57px;
   margin-bottom: 3px;
-  font-size: 9pt;
+  font-size: 11pt;
 }
 .tooltiptext::after {
   content: "";
